Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-56563

can't build qtwebview on macOS 10.9

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P0: Blocker
    • 5.8.0 RC
    • 5.8.0 Beta
    • WebView
    • None
    • macOS
    • fdf3a401b743c2e72c20f901641907b6a6ffc956

    Description

      https://codereview.qt-project.org/#/c/172600/
      http://testresults.qt.io/logs/qt/qtwebview/d4ef3487e83d578e8ddeef116d2bc2d18cec0900/OSXOSX_10_09x86_64OSXOSX_10_09x86_64Clangqtci-osx-10.9-x86_64DeveloperBuild_Release_QtNamespace_NoPch/d37fa0b8480bf88266460a3c2fb998c0634e9827/buildlog.txt.gz

      Module "qt/qtwebview" (b2586ea54a8ae13169908e3dc8a85d21e0eb2f14) did not compile:
       In file included from qwebview_osx.mm:38:
       ./qwebview_osx_p.h:59:30: error: Objective-C declarations may only appear in global scope
       /Users/qt/work/install/lib/QtCore.framework/Headers/qglobal.h:543:60: note: expanded from macro 'Q_FORWARD_DECLARE_OBJC_CLASS'
       In file included from qwebview_darwin.mm:37:
       ./qwebview_darwin_p.h:71:30: error: Objective-C declarations may only appear in global scope
       /Users/qt/work/install/lib/QtCore.framework/Headers/qglobal.h:543:60: note: expanded from macro 'Q_FORWARD_DECLARE_OBJC_CLASS'
       qwebview_osx.mm:59:12: error: Objective-C declarations may only appear in global scope
       qwebview_osx.mm:72:17: error: Objective-C declarations may only appear in global scope
       In file included from qwebview_darwin.mm:63:
       ./qwebview_osx_p.h:59:30: error: Objective-C declarations may only appear in global scope
       /Users/qt/work/install/lib/QtCore.framework/Headers/qglobal.h:543:60: note: expanded from macro 'Q_FORWARD_DECLARE_OBJC_CLASS'
       qwebview_osx.mm:76:5: error: use of undeclared identifier 'qtWebViewPrivate'; did you mean 'webViewPrivate'?
       qwebview_osx.mm:74:72: note: 'webViewPrivate' declared here
       qwebview_darwin.mm:159:12: error: Objective-C declarations may only appear in global scope
       qwebview_darwin.mm:172:17: error: Objective-C declarations may only appear in global scope
       qwebview_osx.mm:82:12: error: unknown type name 'qtWebViewPrivate'; did you mean 'WebViewPrivate'?
       /Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX10.10.sdk/System/Library/Frameworks/WebKit.framework/Headers/WebView.h:47:8: note: 'WebViewPrivate' declared here
       qwebview_osx.mm:82:28: error: cannot use arrow operator on a type
       qwebview_darwin.mm:177:9: error: use of undeclared identifier 'qDarwinWebViewPrivate'; did you mean 'webViewPrivate'?
       qwebview_darwin.mm:173:76: note: 'webViewPrivate' declared here
       qwebview_osx.mm:83:12: error: unknown type name 'qtWebViewPrivate'; did you mean 'WebViewPrivate'?
       /Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX10.10.sdk/System/Library/Frameworks/WebKit.framework/Headers/WebView.h:47:8: note: 'WebViewPrivate' declared here
       qwebview_osx.mm:83:28: error: cannot use arrow operator on a type
       qwebview_darwin.mm:184:12: error: use of undeclared identifier 'qDarwinWebViewPrivate'
       qwebview_osx.mm:94:11: error: use of undeclared identifier 'qtWebViewPrivate'; did you mean 'WebViewPrivate'?
       /Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX10.10.sdk/System/Library/Frameworks/WebKit.framework/Headers/WebView.h:47:8: note: 'WebViewPrivate' declared here
       qwebview_osx.mm:95:16: error: unknown type name 'qtWebViewPrivate'; did you mean 'WebViewPrivate'?
       /Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX10.10.sdk/System/Library/Frameworks/WebKit.framework/Headers/WebView.h:47:8: note: 'WebViewPrivate' declared here
       qwebview_osx.mm:95:32: error: cannot use arrow operator on a type
       qwebview_darwin.mm:184:55: error: use of undeclared identifier 'qDarwinWebViewPrivate'
       qwebview_osx.mm:111:11: error: use of undeclared identifier 'qtWebViewPrivate'; did you mean 'WebViewPrivate'?
       /Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX10.10.sdk/System/Library/Frameworks/WebKit.framework/Headers/WebView.h:47:8: note: 'WebViewPrivate' declared here
       qwebview_darwin.mm:185:12: error: use of undeclared identifier 'qDarwinWebViewPrivate'
       qwebview_osx.mm:113:16: error: unknown type name 'qtWebViewPrivate'; did you mean 'WebViewPrivate'?
       /Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX10.10.sdk/System/Library/Frameworks/WebKit.framework/Headers/WebView.h:47:8: note: 'WebViewPrivate' declared here
       qwebview_osx.mm:113:32: error: cannot use arrow operator on a type
       qwebview_osx.mm:124:11: error: use of undeclared identifier 'qtWebViewPrivate'; did you mean 'WebViewPrivate'?
       /Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX10.10.sdk/System/Library/Frameworks/WebKit.framework/Headers/WebView.h:47:8: note: 'WebViewPrivate' declared here
       qwebview_darwin.mm:185:48: error: use of undeclared identifier 'qDarwinWebViewPrivate'
       qwebview_osx.mm:127:16: error: unknown type name 'qtWebViewPrivate'; did you mean 'WebViewPrivate'?
       /Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX10.10.sdk/System/Library/Frameworks/WebKit.framework/Headers/WebView.h:47:8: note: 'WebViewPrivate' declared here
       qwebview_osx.mm:127:32: error: cannot use arrow operator on a type
       qwebview_darwin.mm:195:11: error: use of undeclared identifier 'qDarwinWebViewPrivate'
       make[2]: *** [.obj/qwebview_osx.o] Error 1
       qwebview_darwin.mm:196:16: error: use of undeclared identifier 'qDarwinWebViewPrivate'
       qwebview_darwin.mm:197:48: error: use of undeclared identifier 'qDarwinWebViewPrivate'
       qwebview_darwin.mm:202:12: error: use of undeclared identifier 'qDarwinWebViewPrivate'
       qwebview_darwin.mm:202:55: error: use of undeclared identifier 'qDarwinWebViewPrivate'
       qwebview_darwin.mm:209:11: error: use of undeclared identifier 'qDarwinWebViewPrivate'
       qwebview_darwin.mm:211:16: error: use of undeclared identifier 'qDarwinWebViewPrivate'
       qwebview_darwin.mm:212:48: error: use of undeclared identifier 'qDarwinWebViewPrivate'
       qwebview_darwin.mm:223:11: error: use of undeclared identifier 'qDarwinWebViewPrivate'
       qwebview_darwin.mm:226:16: error: use of undeclared identifier 'qDarwinWebViewPrivate'
       make[2]: *** [.obj/qwebview_darwin.o] Error 1
       make[1]: *** [sub-webview-make_first] Error 2
       make: *** [sub-src-make_first] Error 2
      

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            alexandru.croitor Alexandru Croitor
            liaqi Liang Qi
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes