Fix namespace build on macOS

Forward declaring Objective C classes inside a namespace is not
permitted. Declaring and defining new Objective C classes in a
namespaced is also not permitted.

Task-number: QTBUG-56563
Change-Id: I02c1cc9e6f56bd3d437d10a515531d7dee930376
Reviewed-by: Liang Qi <liang.qi@qt.io>
Reviewed-by: Tor Arne Vestbø <tor.arne.vestbo@qt.io>
Reviewed-by: Timur Pocheptsov <timur.pocheptsov@theqtcompany.com>
Reviewed-by: Christian Stromme <christian.stromme@qt.io>
Reviewed-by: Jake Petroules <jake.petroules@qt.io>